--- a/ionic.config.json
+++ b/ionic.config.json
@@ -6,7 +6,7 @@
   "proxies": [
     {
       "path": "/v1",
-      "proxyUrl": "http://127.0.0.1:5000/api"
+      "proxyUrl": "http://127.0.0.1:5000"
     }
   ]
 }
